(lang dune 3.6)

(name con)

(generate_opam_files true)

(source
 (github vkuppoor/paddle))

(authors "Venkat Kuppoor")

(maintainers "Venkat Kuppoor")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name con)
 (synopsis "Con: boolean values and branching with conditionals")
 (description "Third iteration of LLVM Racket compiler.")
 (depends ocaml dune parsexp)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
