(lang dune 3.6)

(name con_dupe)

(generate_opam_files true)

(source
 (github vkuppoor/paddle))

(authors "Venkat Kuppoor")

(maintainers "Venkat Kuppoor")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name con_dupe)
 (synopsis "Con & Dupe: branching with conditionals & a duplicity of types")
 (description "A Racket-subset compiler that targets LLVM IR")
 (depends ocaml dune parsexp)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
